--- a/clusters/minikube/apps/snort/kustomization.yaml
+++ b/clusters/minikube/apps/snort/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   # - helmrelease.yaml
   - namespace.yaml
   - https://github.com/snort3/snort3/releases/download/3.3.7.0/snort3-ips.yaml
-patches:
+patchesStrategicMerge:
   - snort3-values.yaml
